# Master-Thesis

./: README.md
kinova_bringup/launch/config/: robot_parameters.yaml
kinova_description/urdf/: _j2n6s300.xacro.swp  kinova_inertial.xacro
kinova_driver/: CMakeLists.txt
kinova_driver/src/: kinova_api.cpp
kinova_driver/src/nodes/: kinova_api_funcs.cpp
kinova_gazebo/: Gazebo.md
kinova_gazebo/launch/: robot_launch.launch
thesis_control/: CMakeLists.txt  package.xml
thesis_control/config/: j2n6s300_control.yaml
thesis_control/launch/: j2n6s300_control.launch  j2n6s300_gazebo.launch
thesis_control/src/: move_home.py
thesis_demo/: CMakeLists.txt  README.md  package.xml  setup.py
thesis_demo/kinova_api/: kinova_api_wrapper.py
thesis_demo/nodes/: JTF_control_robot.py  PID_joint_space.py  PID_task_space.py  calibration_robot.py  cart_pos_control.py  cart_pos_control_robot.py  imp_control_Q.py  imp_control_Q_robot.py  imp_control_Qv1.py  imp_control_robot.py  imp_control_robot_v0.py  imp_control_robot_v1.py  imp_control_v0.py  imp_control_v1.py  impedance_control.py  info_jaco2.py  jaco2_control.py  jaco2_control_robot.py  joint_pos_control.py  joint_pos_control_robot.py  joint_space.py  joint_space_robot.py  joint_space_v1.py  surface_polishing.py  surface_polishing_Q.py  surface_polishing_gazebo.py  surface_polishing_v0.py
thesis_demo/orocos/hrl_geom/: pose_converter.py
thesis_demo/orocos/pykdl_utils/: __init__.py  joint_kinematics.py  kdl_kinematics.py
